# flexsearch

./: .gitignore  QWEN.md  go.work  go.work.sum  services-cache-database-analysis.md  services-optimization-plan.md
docs/: BM25和向量嵌入集成方案.md  FlexSearch中间层可复用库和服务分析.md  FlexSearch作为全文搜索数据库替代品的可行性分析.md  FlexSearch功能分析.md  FlexSearch搜索能力分析.md  FlexSearch用户交互方式分析.md  FlexSearch索引类型分析.md  FlexSearch通用中间层架构设计方案.md  代码结构设计分析.md  (+1 more)
services/bm25/: .gitignore  Cargo.toml
services/bm25/configs/: config.toml
services/bm25/src/: config.rs  error.rs  lib.rs  main.rs
services/bm25/src/index/: cache.rs  tests.rs
services/inversearch/: Cargo.toml  build.rs
services/inversearch/src/: async_.rs  error.rs  lib.rs  main.rs  metrics.rs  serialize.rs
services/inversearch/src/charset/: mod.rs
services/inversearch/src/charset/latin/: advanced.rs  balance.rs  extra.rs  mod.rs  soundex.rs
services/inversearch/src/common/: mod.rs
services/inversearch/src/config/: mod.rs
services/inversearch/src/document/: batch.rs  mod.rs  serialize.rs  tag.rs  tree.rs
services/inversearch/src/encoder/: mod.rs
services/inversearch/src/highlight/: mod.rs
services/inversearch/src/index/: builder.rs  mod.rs  remover.rs
services/inversearch/src/intersect/: compat.rs  mod.rs
services/inversearch/src/keystore/: mod.rs
services/inversearch/src/resolver/: mod.rs
services/inversearch/src/search/: coordinator.rs  mod.rs
services/inversearch/src/serialize/: chunked.rs
services/inversearch/src/storage/: mod.rs  redis.rs
services/inversearch/src/tokenizer/: mod.rs
services/shared/: go.mod  (+1 more)
(+103 files in other folders)
