[package]
name = "inversearch-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
linked-hash-map = "0.5"

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.11"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[features]
default = ["cache", "async", "store", "suggestion", "keystore"]
cache = []
async = []
store = []
suggestion = []
keystore = []
